# tree-sitter-mustach_json5

./: Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json  utils.js
bindings/c/: tree-sitter-mustache-json5.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_mustache_json5/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMustacheJson5/: mustache_json5.h
bindings/swift/TreeSitterMustacheJson5Tests/: TreeSitterMustacheJson5Tests.swift
editors/zed/: README.md  TROUBLESHOOTING.md  extension.toml  install-formatter.sh  package-extension.sh  package.json  test-extension.sh  test.mustache_json5
editors/zed/grammars/: mustache_json5.toml
editors/zed/languages/: mustache_json5.toml
editors/zed/languages/mustache-json5/: brackets.scm  config.toml  highlights.scm  indents.scm  outline.scm
editors/zed/queries/mustache_json5/: folds.scm
formatter/: Cargo.toml  README.md
formatter/src/: config.rs  formatter.rs  lib.rs  main.rs
formatter/tests/: fixtures.rs  integration.rs
queries/: injections.scm  lints.scm  locals.scm
releases/v0.1.0/: RELEASE_NOTES.md  checksums.sha256  mustache-json5-fmt-Darwin-arm64  mustache-json5-fmt-Darwin-arm64.tar.gz.sha256  mustache-json5-fmt-macos-arm64  mustache-json5-fmt-macos-arm64.tar.gz.sha256
src/: grammar.json  node-types.json  parser.c
