[package]
name = "mustache-json5-fmt"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A formatter for Mustache JSON5 templates using tree-sitter"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/tree-sitter-mustache_json5"
keywords = ["formatter", "mustache", "json5", "tree-sitter"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "mustache-json5-fmt"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.25"
tree-sitter-mustache-json5 = { path = ".." }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
colored = "2.0"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
pretty_assertions = "1.4"



[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
